--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,12 +4,21 @@
   <body>
     <%- include('./partials/nav.ejs') %>
     <div class="max-w-lg mx-auto">
-      <form class="flex">
-        <input
-          type="text"
-          placeholder="Paste a link to shorten"
-          class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
-        />
+      <form class="flex items-center justify-center">
+        <div class="flex flex-col">
+          <input
+            id="input2"
+            type="text"
+            placeholder="id (optional)"
+            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+          />
+          <input
+            id="input1"
+            type="text"
+            placeholder="Paste a link to shorten"
+            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+          />
+        </div>
         <button type="submit" class="px-8 ml-4 bg-rose-600 text-white rounded">
           go
         </button>
@@ -17,28 +26,28 @@
       <div id="out"></div>
     </div>
     <script>
-      const random = (Date.now() + Math.floor(Math.random() * 1660290034505))
-        .toString(36)
-        .substring(2, 6);
-      console.log(random);
-
       const form = document.querySelector("form");
-      const input = document.querySelector("input");
+      const input = document.querySelector("#input1");
+      const inputId = document.querySelector("#input2");
       const out = document.querySelector("#out");
 
       form.addEventListener("submit", e => {
         e.preventDefault();
-        urlVaidation =
+        input.classList.remove("bg-green-200");
+        input.classList.remove("bg-rose-200");
+        urlValidation =
           /^(?:http(s)?:\/\/)?[\w.-]+(?:\.[\w\.-]+)+[\w\-\._~:/?#[\]@!\$&'\(\)\*\+,;=.]+$/;
         urlReg = /^(http|https):\/\/[^ "]+$/;
 
-        if (urlVaidation.test(input.value)) {
-          const url = urlReg.test(input.value)
-            ? input.value
-            : `http://${input.value}`;
-          console.log(url);
+        if (urlValidation.test(input.value.trim())) {
+          const url = urlReg.test(input.value.trim())
+            ? input.value.trim()
+            : `http://${input.value.trim()}`;
+
+          const id = inputId.value.trim() === "" ? false : inputId.value.trim();
           data = {
             url: url,
+            id: id,
           };
 
           fetch("/api", {
@@ -50,9 +59,14 @@
           })
             .then(res => res.json())
             .then(data => {
-              console.log(data);
-              input.value = window.location.href + data.id;
-              input.classList.add("bg-green-200 disabled");
+              if (data.error) {
+                inputId.value = `'${data.id}' is already taken`;
+                inputId.classList.add("bg-rose-200");
+              } else {
+                console.log(data);
+                input.value = window.location.href + data.id;
+                input.classList.add("bg-green-200");
+              }
             })
             .catch(err => {
               console.log(err);
