--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('./_partials/head.ejs') %>
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('./_partials/nav.ejs') %>
     <div class="container mx-auto">
       <div class="flex flex-col gap-4 items-center">
         <h1 class="inline text-9xl text-rose-700">4$4</h1>
