--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -3,24 +3,27 @@
   <%- include('../_partials/head.ejs') %>
   <body>
     <%- include('../_partials/nav.ejs') %>
-    <div class="max-w-xs mx-auto">
-      <form class="flex flex-col gap-5 items-center justify-center">
-        <div class="flex flex-col gap-5">
+    <div class="max-w-5xl mx-auto">
+      <form class="relative">
+        <div class="flex flex-col gap-5 w-full">
           <input
             id="input2"
             type="text"
             placeholder="id (optional)"
-            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+            class="w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 hidden"
           />
           <input
             id="input1"
             type="text"
-            placeholder="Paste a link to shorten"
-            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+            placeholder="http:// . . . "
+            class="block bg-slate-900 text-2xl w-full border-slate-500 border-4 rounded-3xl px-10 py-5 shadow-sm focus:border-yellow-500 focus:ring focus:ring-yellow-500 pr-44 focus:ring-opacity-50"
           />
         </div>
-        <button type="submit" class="px-8 bg-rose-600 text-white rounded">
-          go
+        <button
+          type="submit"
+          class="absolute px-10 py-2 top-1/2 right-5 -translate-y-1/2 bg-yellow-500 text-slate-700 font-extrabold text-3xl rounded-full"
+        >
+          GO
         </button>
       </form>
       <div id="out"></div>
