fix bg asset file location

--- a/src/views/assets/styles.css
+++ b/src/views/assets/styles.css
@@ -7,7 +7,7 @@
 
 html {
   font-family: "Ubuntu", sans-serif;
-  background-image: url("https://s8.uupload.ir/files/bg_fp0o.png");
+  background-image: url("/assets/bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
